@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>alien4cloud</groupId>
   <artifactId>alien4cloud-parent</artifactId>
-  <version>3.2.0-SNAPSHOT</version>
+  <version>3.2.0-TEST-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Application LIfecycle ENabler parent project.</name>
   <description>Application LIfecycle ENabler is an application that allows you to manage your application's lifecycle
@@ -31,7 +31,7 @@
 -->
 
     <!-- Utilities -->
-    <lombok.version>1.18.12</lombok.version>
+    <lombok.version>1.18.16</lombok.version>
     <guava.version>19.0</guava.version>
     <commons.fileupload.version>1.2.2</commons.fileupload.version>
     <commons-io.version>1.3.2</commons-io.version>
@@ -73,10 +73,10 @@
 
     <!-- Elastic Search mapper (reference the elastic search version actually). -->
     <!-- Elastic Search is in Elastic Search dependencies -->
-    <elasticsearch.version>6.6.2</elasticsearch.version>
-    <es-mapping.version>6.6.2-1</es-mapping.version>
+    <elasticsearch.version>6.8.13</elasticsearch.version>
+    <es-mapping.version>6.8.13-1-SNAPSHOT</es-mapping.version>
     <!-- Groovy is required for ElasticSearch to run as server in order to process scripts -->
-    <groovy.version>2.3.5</groovy.version>
+    <groovy.version>3.0.6</groovy.version>
 
     <!-- Logging -->
     <log4j.version>2.8.2</log4j.version>
@@ -93,13 +93,16 @@
     <assertj-core.version>3.6.2</assertj-core.version>
 
     <!-- Build tools -->
-    <java.version>1.8</java.version>
+    <java.version>15</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.version>2.3.2</maven.compiler.version>
+    <maven.compiler.version>3.8.1</maven.compiler.version>
     <maven.assembly.version>2.4</maven.assembly.version>
     <jetty.version>9.4.12.v20180830</jetty.version>
     <jetty-jsp.version>2.2.0.v201112011158</jetty-jsp.version>
     <maven.cargo.version>1.7.3</maven.cargo.version>
+
+    <!-- JDK upgrade -->
+    <javax.annotation.version>1.3.2</javax.annotation.version>
   </properties>
 
   <dependencies>
@@ -422,6 +425,7 @@
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
         <version>${groovy.version}</version>
+        <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
@@ -486,7 +490,7 @@
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb</artifactId>
+        <artifactId>jaxb-impl</artifactId>
         <version>${jaxb.version}</version>
       </dependency>
 
@@ -540,6 +544,13 @@
         <artifactId>assertj-core</artifactId>
         <version>${assertj-core.version}</version>
         <scope>test</scope>
+      </dependency>
+
+      <!-- JDK upgrade -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>${javax.annotation.version}</version>
       </dependency>
     </dependencies>
 
@@ -613,8 +624,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.version}</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+             <release>${java.version}</release>
+      <!--    <source>${java.version}</source>
+          <target>${java.version}</target> -->
         </configuration>
       </plugin>
 
@@ -623,7 +635,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.14.1</version>
         <configuration>
-          <argLine>${argLine}</argLine>
+          <argLine>--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
@@ -632,7 +644,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.16</version>
         <configuration>
-          <argLine>${argLine}</argLine>
+          <argLine>--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
